# My_Skype

./: .gitignore  .travis.yml  CMakeLists.txt  GraphicWrapper.cpp  GraphicWrapper.hpp  IGraphicWrapper.hpp  NetworkHandler.cpp  NetworkHandler.hpp  README.md  build_executables_linux.sh  build_executables_windows_10.ps1  conanfile.txt  main.cpp
lib/uti/my_network/: CMakeLists.txt
lib/uti/my_network/BlockingMultiThread/: ClientUdpMultiThreadWrapper.cpp  ClientUdpMultiThreadWrapper.hpp  IClientUdpMultiThreadWrapper.hpp
lib/uti/my_network/tests/: CMakeLists.txt
srcs/: AudioWrapper.cpp  AudioWrapper.hpp  Exception.hpp  GraphicWrapper.cpp  GraphicWrapper.hpp  IAudioWrapper.hpp  IGraphicWrapper.hpp  Macro.hpp  NetworkHandler.cpp  NetworkHandler.hpp  main.cpp
